fix logo distortion

--- a/website/app.css
+++ b/website/app.css
@@ -44,10 +44,6 @@ footer {
   padding: 40px 0;
 }
 
-.container.logo > img{
-  height: 280px;
-}
-
 .navbar-purewater .navbar-nav>li>a {
  font-size: 16px;
 }
